--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,17 @@
+# Análisis de datos y visualización
+pandas==2.0.3
+numpy==1.24.3
+matplotlib==3.7.1
+seaborn==0.12.2
+jupyter==1.0.0
+ipykernel==6.25.0
+ipython==8.14.0
+
+# Machine Learning y optimización
+scikit-learn==1.3.0
+catboost==1.2
+lightgbm==3.3.5
+optuna==3.3.0
+scipy==1.10.1
+statsmodels==0.14.0
 
